--- a/web/config/db_config.properties
+++ b/web/config/db_config.properties
@@ -1,5 +1,7 @@
+url = jdbc:mysql://localhost/xml
 user = root
 password = 27031998
 autoReconnect = true
 characterEncoding = UTF-8
 useUnicode = true
+useSSL = false
